# open-look

./: CMakeLists.txt  README.md
config/: Xdefaults
lib/: CMakeLists.txt
lib/olgx/: CMakeLists.txt  ol_button.c  ol_button_.h  ol_color.c  ol_color_.h  ol_draw.c  ol_draw_.h  ol_init.c  ol_init_.h  ol_misc.c  ol_misc_.h  ol_sb.c  ol_sb_.h  ol_slider.c  ol_slider_.h  olgx_impl.h
src/: CMakeLists.txt
src/olwm/: CMakeLists.txt  defaults.c  fallback_allplanes.c  usermenu.c
